# rag-project

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.codeassistant/: mcp.json
augmented-generation/: .env.example  README.md  config.py  pyproject.toml  requirements.txt
augmented-generation/app/: __init__.py
augmented-generation/app/routes/: generation.py  health.py
augmented-generation/app/services/: generation_service.py
augmented-generation/app/utils/: exceptions.py  middleware.py  validators.py
data-vector-manager/: README.md  config.py  pyproject.toml  requirements.txt
data-vector-manager/app/: __init__.py  db.py
data-vector-manager/app/routes/: documents.py
data-vector-manager/app/services/: data_service.py
data-vector-manager/app/utils/: exceptions.py
docs/: c4-container-diagram.puml  c4-context-diagram.puml
llm-audit/: .env.example  README.md  config.py  pyproject.toml  requirements.txt
llm-audit/app/: __init__.py
llm-audit/app/routes/: estimation.py  health.py
llm-audit/app/services/: cosine_similarity.py  enhanced_similarity.py  tokenizer.py
llm-audit/app/utils/: exceptions.py
mcp-client/: README.md  config.py  pyproject.toml  run.py
mcp-client/app/: __init__.py
mcp-client/app/routes/: chat.py  health.py
mcp-client/app/templates/: index.html
mcp-client/app/utils/: exceptions.py  logging_config.py  mcp_client.py  middleware.py
mcp-server/: .dockerignore  README.md  fastmcp-local.json  fastmcp.json  pyproject.toml  requirements.txt  server.py
nginx/templates/: api-gateway.conf.template
