[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP-Client for RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "langchain>=1.0.3",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "python-dotenv>=1.2.1",
]
